--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,26 @@
 {
     "env": {
-        "es2021": true,
-        "node": true
+        "browser": true,
+        "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "airbnb"
     ],
     "overrides": [
     ],
     "parserOptions": {
+        "ecmaFeatures": {
+            // "jsx": true
+        },
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    
     "plugins": [
         "react"
     ],
     "rules": {
+        "react/prop-types": 0
     }
 }
